<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_clicked"
        android:title="@string/home" />
    <item
        android:id="@+id/categories"
        android:icon="@drawable/ic_category_not_clicked"
        android:title="@string/categories" />
    <item
        android:id="@+id/shopCart"
        android:icon="@drawable/ic_shop_cart_not_clicked"
        android:title="@string/shop_cart" />
    <item
        android:id="@+id/saved"
        android:icon="@drawable/ic_saved_not_clicked"
        android:title="@string/saved" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile_not_clicked"
        android:title="@string/profile" />
</menu>