<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainPageBackground">

    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:background="@drawable/bg_search_bar_with_border"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_search"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:autofillHints="Ноутбуки"
            android:background="@android:color/transparent"
            android:cursorVisible="true"
            android:hint="@string/searchOfProduct"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/textGray"
            android:textColorHint="@color/colorAccent"
            android:textCursorDrawable="@drawable/shape_cursor_color"
            android:textSize="17sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/categories"
        android:textAllCaps="true"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_categories_in_home_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_categories" />

    <include
        android:id="@+id/someAd"
        layout="@layout/some_ad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_categories_in_home_fragment" />

    <TextView
        android:id="@+id/tv_recommendation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/recommendation"
        android:textAllCaps="true"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/someAd" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_all_products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_recommendation" />

</androidx.constraintlayout.widget.ConstraintLayout>